include/sprk_block.h

//  @warning THE FOLLOWING @INTERFACE BLOCK IS AUTO-GENERATED BY ZPROJECT!
//  @warning Please edit the model at "api/sprk_block.xml" to make changes.
//  @interface
//  Creates a new block
SPRK_EXPORT sprk_block_t *
    sprk_block_new (sprk_descriptor_t *descriptor, zlist_t *applied_transforms);
//  Destroy the sprk_block.
SPRK_EXPORT void
    sprk_block_destroy (sprk_block_t **self_p);
//  Queue a transformation to be applied to this block.
SPRK_EXPORT void
    sprk_block_queue_transform (sprk_block_t *self, sprk_transform_t *transform);
//  
SPRK_EXPORT sprk_descriptor_t *
    sprk_block_descriptor (sprk_block_t *self);
//  Self test of this class.
SPRK_EXPORT void
    sprk_block_test (bool verbose);