include/sprk_blockdata.h

//  @warning THE FOLLOWING @INTERFACE BLOCK IS AUTO-GENERATED BY ZPROJECT!
//  @warning Please edit the model at "api/sprk_blockdata.xml" to make changes.
//  @interface
//  Create a new sprk_blockdata.
SPRK_EXPORT sprk_blockdata_t *
    sprk_blockdata_new (sprk_block_t *block, float*data, uint32_t length);
//  Destroy the sprk_blockdata.
SPRK_EXPORT void
    sprk_blockdata_destroy (sprk_blockdata_t **self_p);
//  Queue a transformation to be applied to this block.
SPRK_EXPORT void
    sprk_blockdata_queue_transform (sprk_blockdata_t *self, sprk_transform_t *transform);
//  
SPRK_EXPORT sprk_descriptor_t *
    sprk_blockdata_descriptor (sprk_blockdata_t *self);
//  Self test of this class.
SPRK_EXPORT void
    sprk_blockdata_test (bool verbose);